--- a/web/index.html
+++ b/web/index.html
@@ -53,6 +53,17 @@
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+
+    // Register the service worker for Firebase Messaging
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/firebase-messaging-sw.js')
+        .then((registration) => {
+          console.log('Service Worker registered with scope:', registration.scope);
+        })
+        .catch((error) => {
+          console.log('Service Worker registration failed:', error);
+        });
+    }
   </script>
 </head>
 <body>
