--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-messaging.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js"></script>
 
-  <!-- Firebase Configuration -->
+  <!-- Firebase Configuration for Service Worker -->
   <script>
     // Your web app's Firebase configuration
     const firebaseConfig = {
