--- a/downloads.html
+++ b/downloads.html
@@ -51,7 +51,7 @@
     <div class="container">
         <image src="assets/images/logo.png" alt="Wewire Logo" ></image>
         <h1>Télécharger Wewire Maintenance System</h1>
-        <a href="build/app/outputs/flutter-apk/app-debug.apk" class="download-button" download>Télécharger pour Android</a>
+        <a href="https://drive.google.com/file/d/1gN1JD6A5c9WDh34U63tBi2b3fYJLAzyG/view?usp=drive_link" class="download-button" download>Télécharger pour Android</a>
         <br>
         <a href="https://drive.google.com/uc?export=download&id=1l6z3NbKc_mu2mZUoDFOz07If9FjyC1VQ" class="download-button" download>Télécharger pour Windows</a><br>
         <div class="note">
